# tracemalloc

./: .gitignore  AGENTS.md  Cargo.toml  README.md  justfile
.github/workflows/: ci.yaml
example/: README.md  justfile  main.py  pyproject.toml
py/: Cargo.toml  pyproject.toml
py/src/: lib.rs
python/src/: lib.rs
src/: aggregator.rs  config.rs  event.rs  export.rs  lib.rs  main.rs  ring_buffer.rs  snapshot.rs  stack.rs  stack_capture.rs  state.rs
