[package]
name = "tracemalloc"
version = "0.1.0"
edition = "2024"

[dependencies]
crossbeam-queue = "0.3"
backtrace = { version = "0.3", default-features = false, features = ["std"] }
fastrand = "2"
dashmap = "6.1.0"
nohash-hasher = "0.2.0"
smallvec = "1.13"
memmap2 = "0.9"
prost = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(not(windows))'.dependencies]
pprof = { version = "0.14", default-features = false, features = ["prost-codec"] }

[lints.rust]
mismatched_lifetime_syntaxes = "allow"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }

[lints.clippy]
all = { level = "deny", priority = -1 }
arbitrary-source-item-ordering = "deny"
enum_glob_use = "allow"
ignore_without_reason = "allow"
needless_pass_by_value = "allow"
pedantic = { level = "deny", priority = -1 }
similar_names = "allow"
struct_excessive_bools = "allow"
struct_field_names = "allow"
too_many_arguments = "allow"
too_many_lines = "allow"
type_complexity = "allow"
undocumented_unsafe_blocks = "deny"
unnecessary_wraps = "allow"
wildcard_imports = "allow"
