[project]
name = "rust-tracemalloc-demo"
version = "0.1.0"
description = "Demonstration workload that uses the rust_tracemalloc extension."
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = ["rust-tracemalloc"]

[tool.ruff]
src = ["src"]
indent-width = 2
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 20
indent-style = "space"
quote-style = "single"

[tool.uv.sources]
rust-tracemalloc = { path = "../py", editable = true }
